# target-s3

./: .gitignore  README.md  config.json  input.txt  meltano.yml  pyproject.toml  sample-config.json
target_s3/: sinks.py  target.py
target_s3/formats/: format_base.py  format_csv.py  format_json.py  format_jsonl.py  format_parquet.py  format_plaintext.py
target_s3/object_types/: object_type_base.py  object_type_csv.py  object_type_parquet.py
target_s3/tests/: __init__.py  sample_input.txt  test_core.py
