[tool.poetry]
name = "target-s3"
version = "1.0.6"
description = "`target-s3` is a Singer target for s3, built with the Meltano Singer SDK."
authors = ["crowemi"]
keywords = [
    "ELT",
    "s3",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.25.1"
singer-sdk = "^0.13.0"
smart-open = {extras = ["s3"], version = "^6.2.0"}
pyarrow = "^10.0.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
fsspec = "^2022.10.0"
s3fs = "^2022.10.0"
pymongo = "^4.3.3"
boto3 = "~1.24"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest = "^6.2.5"
tox = "^3.24.4"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_s3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3 = 'target_s3.target:Targets3.cli'
